<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp">
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/linkedin"
                android:id="@+id/linked_in"
                android:padding="20dp"
                android:src="@drawable/linkedin"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_toRightOf="@+id/linked_in"
                android:textSize="25dp"
                android:gravity="center"
                android:id="@+id/linkedin"
                android:text="@string/linkedin"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/twitter"
                android:padding="20dp"
                android:src="@drawable/icons_twitter"
                android:layout_below="@+id/linked_in"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/txt_twitter"
                android:text="@string/twitter"
                android:textSize="25dp"
                android:layout_toRightOf="@+id/twitter"
                android:layout_below="@+id/linked_in"
                android:gravity="center|start"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/mail"
                android:src="@drawable/mail"
                android:padding="20dp"
                android:layout_below="@+id/twitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/txt_mail"
                android:text="@string/mailid"
                android:textSize="21dp"
                android:layout_toRightOf="@+id/mail"
                android:layout_below="@+id/txt_twitter"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:gravity="center|start"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/whats_app"
                android:src="@drawable/icons8_whatsapp_240"
                android:padding="20dp"
                android:layout_below="@id/mail"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/txt_whats_app"
                android:text="@string/whatsapp_num"
                android:textSize="21dp"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/whats_app"
                android:layout_below="@id/txt_mail"
                android:gravity="center|start"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>